# summerstudy

./: CMakeLists.txt  main.cpp
BigDeal/: .gitignore  CMakeLists.txt  README.md  main.cpp
BigDeal/include/: Armor.hpp  Detect.hpp  ImagePreprocesser.hpp  KalmanFilter.hpp  number_classifier.hpp
BigDeal/src/: Armor.cpp  Detect.cpp  Detect.hpp  ImagePreprocesser.cpp  KalmanFilter.cpp  KalmanFilter.hpp  Predict.hpp  number_classifier.cpp  process.hpp
kalmen/: hm1.ipynb  hm1.py  hm2.ipynb  hm2.py  hm2_test.py  test.py  未命名1.py  未命名3.py
kalmen/cpp/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp  main.cpp  show.ipynb  temp.cpp  tran.cpp
kalmen/cpp/output/: homework_data_1_output.txt
kalmen/source/: homework_data_1.txt  homework_data_2.txt  homework_data_3.txt  homework_data_4.txt  kalman_filter.md  measurements.csv  stock_prices.csv  true_states.csv
kalmen/temp/: hm1.ipynb
kalmen/ukf/: main.cpp
pnp/ans/: Armor.hpp  CMakeLists.txt  main.cpp  process.hpp  temp.cpp
pnp/classifier/: Armor.hpp  main.cpp
pnp/classifier/img/: test.cpp
pnp/classifier/include/: number_classifier.cpp  number_classifier.hpp
pnp/detect/: CMakeLists.txt  Makefile  cv  main.cpp
pnp/pose/: 0708.md  main.cpp
pnp/references/: pnp.cpp
pose/: main.cpp
pose/include/: Pose.hpp  Pose_dist.hpp
socket/: CMakeLists.txt  Message.hpp  MessageBuffer.hpp  client.cpp  server.cpp  temp.cpp
src/: Armor.hpp  Detect_temp.hpp  KalmanFilter.cpp  Quaternion.hpp
